--- a/megoldas/index.html
+++ b/megoldas/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Citrusfélék</title>
+    <title>Digitális témahét</title>
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -13,7 +13,7 @@
     <header class="container">
         <div class="row">
             <div class="col-12">
-                <h1 class="d-none d-sm-block">Citrusfélék</h1>
+                <h1 class="d-none d-sm-block">Digitális témahét</h1>
             </div>
         </div>
     </header>
@@ -25,25 +25,18 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
                 <a class="nav-link" href="index.html">Főoldal <span class="sr-only">(current)</span></a>
-                <a class="nav-link" href="index.html#leggyakoribb">Leggyakoribb citrusfélék</a>
-                <a class="nav-link" href="index.html#kulonleges">Különleges citrusfélék</a>
-                <a class="nav-link" href="https://hu.wikipedia.org/wiki/Citrusform%C3%A1k" target="_blank">További
-                    információ</a>
+                <a class="nav-link" href="index.html#matematika">Matematika</a>
+                <a class="nav-link" href="index.html#angol">Angol</a>
+                <a class="nav-link" href="index.html#Ktt">Ktt</a>
+                <a class="nav-link" href="index.html#Német">Német</a>
+                <a class="nav-link" href="index.html#Történelem">Történelem</a>
             </div>
         </div>
     </nav>
     <main class="container ">
         <article class="row">
             <div class="col-12">
-                <h2>Citrusfélék fogalma</h2>
-                <p>
-                    A citrusformák vagy citrusfélék (Citroideae) az APG III osztályozása szerint a valódi kétszikűek
-                    rosids kládjában a eurosid II csoportjába sorolt szappanfavirágúak (Sapindales) rendjébe sorolt
-                    rutafélék (Rutaceae) családjának egyik alcsaládja.
-                </p>
-                <p>A fajok többsége Kelet-, illetve Dél-Ázsiában fejlődött ki, de napjainkra szinte minden trópusi,
-                    illetve szubtrópusi éghajlatú területen, az északi és a déli szélesség 40°-a között termesztik őket.
-                </p>
+                <h2>Verseim</h2>
             </div>
         </article>
         <article class="row">
@@ -93,26 +86,3 @@
                     a rutafélék családjába tartozó, valószínűleg Malajziában és Polinéziában őshonos déligyümölcs. </p>
             </div>
         </article>
-        <article class="row mb-5">
-            <div class="col-12">
-                <h2 id="kulonleges">Különleges citrusok</h2>
-                <ul>
-                    <li>Királynarancs</li>
-                    <li>Curacao</li>
-                    <li>Kumquat</li>
-                    <li>Tangelo</li>
-                    <li>Satsuma</li>
-                    <li>Buddha keze citrom</li>
-                    <li>Klementin</li>
-                    <li>Gyémánt cédra</li>
-                    <li>Pursha</li>
-                    <li>Bergamott</li>
-                </ul>
-            </div>
-        </article>
-    </main>
-    <script src="bootstrap/js/jquery-3.5.1.min.js"></script>
-    <script src="bootstrap/js/bootstrap.min.js"></script>
-</body>
-
-</html>
